# events-framework

./: .coverage  .gitignore  README.md  config.yaml  pyproject.toml
data/: events.csv  fingerprints.csv
framework/: api.py  cli.py  config.py  dedup.py  models.py  orchestrator.py  registry.py  source_manager.py
framework/publication/: base.py  manager.py  smtp.py  telegram.py
framework/sources/: base.py  csv_source.py  example_source.py
framework/storage/: base.py  csv_storage.py  sql_storage.py
tests/: test_api.py  test_csv_source.py  test_csv_storage.py  test_dedup.py  test_models.py  test_orchestrator.py  test_registry.py  test_smtp.py  test_source_manager.py
