[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "events-framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx",
]

[project.scripts]
framework = "framework.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["framework*"]