[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "events-framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "fastapi>=0.95",
    "uvicorn[standard]>=0.20",
    "jsonschema>=4.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.scripts]
framework = "framework.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["framework*"]